--- a/app/assets/stylesheets/tags/_tag_sidebar.scss
+++ b/app/assets/stylesheets/tags/_tag_sidebar.scss
@@ -2,6 +2,7 @@
     .tag_title {
         font-size: 18px;
         font-weight: $semibold;
-        word-break: break-word;
+        word-wrap: break-word;
+        word-break:break-all;
     }
 }
